--- a/src/modules/feed/component/post/post.component.html
+++ b/src/modules/feed/component/post/post.component.html
@@ -3,20 +3,24 @@
 
   <!-- TIPS: [ngStyle]="{'background-image': url(...) }" -->
   <div class="post-author-photo"></div>
-  <div class="post-date"></div>
+  <div class="post-date">{{post.createdAt | date}}</div>
 
   <!-- TIPS: [ngClass]="{liked: [expression booléenne]}" -->
-  <div class="post-user-like">
+  <div class="post-user-like" [ngClass]="{liked: post.liked}">
     <i nz-icon nzType="heart" [nzTheme]="post.liked ? 'fill' : 'outline'"></i>
   </div>
 
   <p class="post-text">
-    <!-- Afficher le texte du poste uniquement-->
+    {{post.message.text.content}}
   </p>
 
   <!-- Itérer sur les "attachements" du message -->
   <div class="post-attachements" *ngFor="let element of post.message.attachements">
     <!-- Utiliser ngIf pour afficher le bon composant en fonction du type d'élément-->
+      <app-post-attachement-video *ngIf="element.type === 'video'" [element]="element"></app-post-attachement-video>
+      <app-post-attachement-audio *ngIf="element.type === 'audio'" [element]="element"></app-post-attachement-audio>
+      <app-post-attachement-youtube *ngIf="element.type === 'youtube'" [element]="element"></app-post-attachement-youtube>
+      <app-post-attachement-image *ngIf="element.type === 'image'" [element]="element"></app-post-attachement-image>
   </div>
   <div #anchor></div>
 </div>
