--- a/src/modules/feed/component/post-attachements/post-attachement-audio/post-attachement-audio.component.html
+++ b/src/modules/feed/component/post-attachements/post-attachement-audio/post-attachement-audio.component.html
@@ -1,3 +1,6 @@
 <div class="post-attachement-audio">
-  <!-- Balise audio -->
+  <div [innerHtml]="element.htmlUrl"></div>
+  <audio controls>
+    <source [src]="url">
+  </audio>
 </div>
