--- a/src/modules/feed/component/post-attachements/post-attachement-image/post-attachement-image.component.html
+++ b/src/modules/feed/component/post-attachements/post-attachement-image/post-attachement-image.component.html
@@ -1,3 +1,4 @@
 <div class="post-attachement-image">
-  <img src="{{element.url}}"/>
+  <div [innerHtml]="element.htmlUrl"></div>
+  <img [src]="url"/>
 </div>
