--- a/src/modules/feed/component/post-attachements/post-attachement-youtube/post-attachement-youtube.component.less
+++ b/src/modules/feed/component/post-attachements/post-attachement-youtube/post-attachement-youtube.component.less
@@ -6,10 +6,14 @@
 
   iframe {
     left: 0;
-    top: 0;
+    top: 25;
     height: 100%;
     width: 100%;
     position: absolute;
     border: none;
   }
+
+  // .post-attachement-url {
+  //   z-index: 100;
+  // }
 }
