--- a/src/app/layouts/app-layout/app-layout.component.html
+++ b/src/app/layouts/app-layout/app-layout.component.html
@@ -1,6 +1,6 @@
 <div class="app-layout">
   <div class="panel-drawer" [ngClass]="{opened: showDrawer}">
-    <!-- Afficher la liste des notifications -->
+    <app-notification-bar [showDrawer]="showDrawer"></app-notification-bar>
   </div>
   <div class="app-layout-panel-left">
     <div class="panel-head">
@@ -9,7 +9,6 @@
     <div class="panel-body">
       <app-room-menu></app-room-menu>
     </div>
-
   </div>
   <div class="app-layout-panel-main">
     <router-outlet></router-outlet>
