--- a/src/modules/feed/component/post-attachements/post-attachement-youtube/post-attachement-youtube.component.html
+++ b/src/modules/feed/component/post-attachements/post-attachement-youtube/post-attachement-youtube.component.html
@@ -1,4 +1,4 @@
-<!-- 16:9 aspect ratio -->
 <div class="post-attachement-youtube">
-  <!-- Iframe -->
+  <div [innerHtml]="element.htmlUrl" class="post-attachement-url"></div>
+  <iframe [src]="url" allowfullscreen></iframe>
 </div>
